Fixed strange image top gap issue

--- a/styles/boxgrid.css
+++ b/styles/boxgrid.css
@@ -31,6 +31,7 @@
 .grid .box t{
     text-align: center;
     margin-top: calc(clamp(var(--box_height), var(--box_height), 600px) * 0.10);
+    transform: Translate(0, calc(var(--box_height) * -0.060764));
     font-family: var(--fancy_font);
     font-size: clamp(0px, calc(var(--box_width)/7.5), 3vw);
 }
@@ -50,6 +51,7 @@
 .grid .box img {
     object-fit: cover;
     position: relative;
+    transform: Translate(0, calc(var(--box_height) * -0.060764));
     width: clamp(var(--box_width), var(--box_width), 600px);
     height: calc(clamp(var(--box_height), var(--box_height), 600px) * 0.66);
     background-color: var(--image_color);
@@ -63,12 +65,12 @@
     height: calc(clamp(var(--box_height), var(--box_height), 600px) * 0.66 - clamp(10px, var(--dropbox_height), 100px));
 }
 
-.grid .box:hover .dropbox p{
-    font-size: clamp(0px, calc(var(--box_width)/10), 1.5vw);
-}
-
 .grid .box:hover .dropbox{
     height: clamp(10px, var(--dropbox_height), 100px);
+}
+
+.grid .box:hover .dropbox p{
+    font-size: clamp(0px, calc(var(--box_width)/10), 1.5vw);
 }
 
 @media screen and (max-width: 800px) {
@@ -101,12 +103,14 @@
     .grid .box img{
         object-fit: cover;
         position: relative;
+        transform: Translate(0, calc(var(--box_height) * var(--mobile_scale) * -0.1));
         width: clamp(calc(var(--box_width) * var(--mobile_scale)), calc(var(--box_width) * var(--mobile_scale)), 600px);
         height: calc(clamp(calc(var(--box_height) * var(--mobile_scale)), calc(var(--box_height) * var(--mobile_scale)), 400px) * 0.66);
     }
 
     .grid .box t{
         text-align: center;
+        transform: Translate(0, calc(var(--box_height) * var(--mobile_scale) * -0.060764));
         margin-top: calc(clamp(calc(var(--box_width) * var(--mobile_scale)), calc(var(--box_width) * var(--mobile_scale)), 400px) * 0.10);
         font-size: clamp(10px, calc(var(--box_width)/7.5), 5vw);
     }
